objects/Zee__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZeeCinema__c</fullName>
        <label>ZeeCinema</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZeeNews__c</fullName>
        <label>ZeeNews</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Zee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>